<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
        

        <Button
            android:id="@+id/add_path_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_add_path" />

        <Button
            android:id="@+id/add_param_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_add_param" />

        <Button
            android:id="@+id/add_header_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_add_header" />

        <Button
            android:id="@+id/add_content_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_add_content" />
        
        <Button
            android:id="@+id/connection_timeout_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_set_connection_timeout" />

        <Button
            android:id="@+id/socket_timeout_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_set_socket_timeout" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/text_enable_connection_retry"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/enable_connection_timeout_toggleBttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:gravity="center" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/text_enable_socket_retry"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/enable_socket_timeout_toggleBttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>