<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_border_2"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/textView1"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_url" />

            <EditText
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_url"
                android:inputType="textUri" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_border_2"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/text_method_type" />

            <Spinner
                android:id="@+id/method_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border_2"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_body"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/body_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/hint_content"
                android:lines="4" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/add_header_bttn"
            android:layout_width="@dimen/default_bttn_size"
            android:layout_height="wrap_content"
            android:text="@string/label_add_header"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/label_set_socket_timeout"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/connection_timeout_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:digits="0123456789"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/value_connection_timeout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/label_set_connection_timeout"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/socket_timeout_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:digits="0123456789"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/value_socket_timeout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/text_enable_connection_retry"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/enable_connection_timeout_toggleBttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:weightSum="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/text_enable_socket_retry"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/enable_socket_timeout_toggleBttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:gravity="center" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/exec_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/label_execute"
                android:textColor="@color/blue" >

                <requestFocus />
            </Button>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>